--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cesium": "^1.63.1",
     "vue": "^2.6.10",
+    "vue-cesium": "^2.0.0-beta.4",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
